# aktualizr

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeGraphVizOptions.cmake  CMakeLists.txt  MODULE.bazel  WORKSPACE  cspell.json
src/: CMakeLists.txt
src/aktualizr_get/: CMakeLists.txt  get.cc  get.h  main.cc
src/aktualizr_info/: aktualizr_info_config.cc  aktualizr_info_config_test.cc  aktualizr_info_test.cc  main.cc
src/aktualizr_primary/: main.cc  primary_secondary_registration_test.cc  secondary.cc  secondary_config.cc
src/aktualizr_secondary/: CMakeLists.txt  aktualizr_secondary.cc  aktualizr_secondary.h  aktualizr_secondary_config_test.cc  aktualizr_secondary_file.cc  aktualizr_secondary_ostree.cc  aktualizr_secondary_ostree.h  aktualizr_secondary_ostree_test.cc  aktualizr_secondary_test.cc  main.cc  msg_handler.cc  secondary_rpc_test.cc  secondary_tcp_server.cc  secondary_tcp_server.h  update_agent.h  update_agent_file.cc  update_agent_ostree.cc
src/cert_provider/: CMakeLists.txt  cert_provider_shared_cred_test.cc  cert_provider_test.cc  main.cc
src/libaktualizr/: CMakeLists.txt
src/libaktualizr-c/: CMakeLists.txt  libaktualizr-c.cc
src/libaktualizr-c/test/: CMakeLists.txt
src/libaktualizr-posix/: CMakeLists.txt  ipuptanesecondary.cc
src/libaktualizr-posix/asn1/: CMakeLists.txt  asn1-cer.cc  asn1-cerstream.cc  asn1_message.cc  asn1_message.h  asn1_test.cc
src/libaktualizr/bootloader/: CMakeLists.txt  bootloader.cc  bootloader_test.cc
src/libaktualizr/bootstrap/: CMakeLists.txt  bootstrap.cc
src/libaktualizr/campaign/: BUILD  CMakeLists.txt  campaign.cc  campaign_test.cc
src/libaktualizr/config/: CMakeLists.txt  base_config.cc  config.cc  config_test.cc
src/libaktualizr/crypto/: CMakeLists.txt  crypto.cc  crypto.h  crypto_test.cc  hash_test.cc  keymanager.cc  keymanager_test.cc  p11engine.cc  p11engine_dummy.cc
src/libaktualizr/http/: CMakeLists.txt  httpclient.cc  httpclient.h  httpclient_test.cc
src/libaktualizr/logging/: CMakeLists.txt  logging.cc
src/libaktualizr/package_manager/: CMakeLists.txt  fetcher_death_test.cc  fetcher_test.cc  ostreemanager.cc  ostreemanager_test.cc  packagemanagerconfig_test.cc  packagemanagerfactory.cc  packagemanagerfactory_test.cc  packagemanagerfake.cc  packagemanagerfake.h  packagemanagerfake_test.cc  packagemanagerinterface.cc
src/libaktualizr/primary/: CMakeLists.txt  aktualizr.cc  aktualizr_fullostree_test.cc  aktualizr_lite_test.cc  aktualizr_test.cc  device_cred_prov_test.cc  download_nonostree_test.cc  metadata_expiration_test.cc  metadata_fetch_test.cc  provisioner.cc  provisioner.h  provisioner_test.cc  reportqueue.cc  reportqueue.h  reportqueue_test.cc  secondary_provider.cc  sotauptaneclient.cc  sotauptaneclient.h  uptane_key_test.cc
src/libaktualizr/storage/: CMakeLists.txt  fsstorage_read.cc  fsstorage_read.h  invstorage.cc  sql_utils.h  sql_utils_test.cc  sqlstorage.cc  sqlstorage.h  sqlstorage_base.cc  sqlstorage_test.cc  storage_atomic_test.cc  storage_common_test.cc
src/libaktualizr/uptane/: CMakeLists.txt  director_test.cc  directorrepository.cc  directorrepository.h  fetcher.cc  imagerepository.cc  iterator.cc  iterator.h  manifest.cc  metawithkeys.cc  role.cc  root.cc  secondary_metadata.h  tuf.cc  tuf_test.cc  uptane_ci_test.cc  uptane_network_test.cc  uptane_ostree_test.cc  uptane_serial_test.cc  uptane_test.cc  (+1 more)
src/sota_tools/: CMakeLists.txt  authenticate.cc  authenticate_test.cc  check.cc  deploy.cc  deploy_test.cc  garage_check.cc  garage_deploy.cc  garage_push.cc  oauth2.cc  ostree_dir_repo.cc  ostree_http_repo.h  ostree_object.cc  ostree_ref.cc  ostree_repo.cc  rate_controller.cc  rate_controller.h  request_pool.cc  server_credentials.cc  treehub_server.h
src/uptane_generator/: CMakeLists.txt  director_repo.cc  image_repo.cc  main.cc  repo.cc  repo.h  repo_test.cc  uptane_repo.cc  uptane_repo.h
src/virtual_secondary/: CMakeLists.txt  managedsecondary.cc  virtual_secondary_test.cc  virtualsecondary.cc
(+72 files in other folders)
