###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "aktualizr", version = "1.0", compatibility_level = 1)

bazel_dep(name = "jsoncpp", version = "1.9.5")