###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "aktualizr", version = "1.0", compatibility_level = 1)

bazel_dep(name = "boost.filesystem", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.log", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.thread", version = "1.83.0.bcr.1")

bazel_dep(name = "jsoncpp", version = "1.9.5")
bazel_dep(name = "googletest", version = "1.14.0")


# TODO use this instead of workspace declarations when bazel releases local repo rules in Starlark 
# https://github.com/bazelbuild/bazel/commit/6f254ce0f95d70e744b513a94d577036712befac
# non_module_local_deps = use_extension("//third_party:extensions.bzl", "non_module_local_deps")
# use_repo(non_module_local_deps, "libcurl")
